src/_buttons.scss
// Buttons
.btn {
	$border-radius: $border-radius-sm;

	appearance: none;
	border: none;
	border-top-right-radius: $border-radius;
	border-top-left-radius: $border-radius;
	border-bottom-left-radius: $border-radius;
	border-bottom-right-radius: 0;
	cursor: pointer;
	display: inline-block;
	font-weight: bold;
	font-size: $font-size-button;
	min-height: $button-size;
	line-height: $line-height;
	outline: none;
	padding: $button-padding-y $button-padding-x;
	text-align: center;
	text-decoration: none;
	transition: background .2s, border .2s, box-shadow .2s, color .2s;
	user-select: none;
	vertical-align: middle;
	text-decoration: none;

	&[disabled],
	&:disabled,
	&.disabled {
		cursor: default;
		opacity: .5;
		pointer-events: none;
	}

	// Round Button
	&.round {
		border-bottom-right-radius: $border-radius;
	}

	// Default Button
	@include button-variant($backgroundColor: $gray-color-light, $activeColor: $gray-color-dark, $activeTextColor: $light-color, $textColor: $gray-color-dark);

	// Primary Button
	&.btn-primary {
		@include button-variant($backgroundColor: $primary-color, $activeColor: $primary-color-dark, $activeTextColor: $light-color, $textColor: $light-color);
	}

	// Secondary Button
	&.btn-secondary {
		@include button-variant($secondary-color, $secondary-color-dark, $light-color, $light-color);
	}

	&.btn-link, &.btn-unstyled {
		background: transparent;
	}

	&.btn-link {
		color: $link-color;

		&:focus,
		&:hover,
		&:active,
		&.active {
			color: $link-color-dark;
		}
	}

	&.btn-unstyled {
		font-family: $body-font-family;
		font-weight: normal;
		color: currentColor;
	}

	// Button Sizes
	&.btn-sm {
		font-size: $font-size-sm;
		min-height: $button-size-sm;
		padding: $button-padding-y-sm $button-padding-x-sm;
	}

	&.btn-lg {
		font-size: $font-size-lg;
		min-height: $button-size-lg;
		padding: $button-padding-y-lg $button-padding-x-lg;
	}

	// Button Block
	&.btn-block {
		display: block;
		width: 100%;
	}

	// Button Action
	&.btn-action {
		min-height: 0;
		min-width: 0;

		width: 3.5rem;
		height: 3.5rem;
		padding-left: 0;
		padding-right: 0;

		&.btn-sm {
			width: 2rem;
			height: 2rem;
		}

		&.btn-lg {
			width: 4.5rem;
			height: 4.5rem;
		}
	}

	// Button Clear
	&.btn-clear {
		background: transparent;
		border: 0;
		color: currentColor;
		min-height: $line-height;
		opacity: 1;
		padding: 0;
		margin: 0;
		text-decoration: none;
		width: $line-height;

		&:focus,
		&:hover {
			background: rgba($bg-color, .5);
			opacity: .95;
		}

		&::before {
			@extend %icon;
			content: $icon-code-times;
		}
	}
}

// Button groups
.btn-group {
	display: inline-flex;

	.btn {
		&:first-child:not(:last-child) {
			border-bottom-right-radius: 0;
			border-top-right-radius: 0;
		}

		&:not(:first-child):not(:last-child) {
			border-radius: 0;
			margin-left: -$border-width;
		}

		&:last-child:not(:first-child) {
			border-bottom-left-radius: 0;
			border-top-left-radius: 0;
			border-bottom-right-radius: $border-radius;
			margin-left: -$border-width;
		}

		&:focus,
		&:hover,
		&:active,
		&.active {
			z-index: $zindex-0;
		}
	}

	&.btn-group-block {
		display: flex;

		.btn {
			flex: 1 0 0;
		}
	}
}

